Fixed the collapsing UI

--- a/ab3000/src/pages/professionalStyle.scss
+++ b/ab3000/src/pages/professionalStyle.scss
@@ -35,8 +35,8 @@
   border-radius: 5px;
   background: linear-gradient(
     to right,
-    rgba(123, 123, 123, 0.82),
-    rgba(87, 90, 140, 0.379)
+    rgb(255, 255, 255),
+    rgba(255, 255, 255, 0.119)
   );
   display: flex;
   flex-direction: column;
@@ -145,6 +145,47 @@
   white-space: normal;
 }
 
+.button {
+  background-color: #65759b;
+  border: none;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 10px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: rgb(0, 0, 0);
+}
+
+.page-container{
+  background: linear-gradient(
+    to right,
+    rgba(159, 159, 159, 0.68),
+    rgba(90, 151, 206, 0.82)
+  );
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: table;
+}
+
+.center-panel {
+  margin: auto;
+  width: 50%;
+  border-radius: 25px;
+  background-color: rgba(255, 255, 255, 0.454);
+  padding: 20px;
+  line-height: 30px;
+
+}
+
+
+
 @media only screen and (max-width: 1023px) {
   .timeline-item-content {
     max-width: 100%;
@@ -200,10 +241,11 @@ p {
 }
 
 ul {
-    margin-left: 0;
-    padding-left: 0;
+  margin-left: 0;
+  padding-left: 0;
 }
 li {
-    margin-left: 1em;
+  margin-left: 1em;
 }
+
 
